--- a/src/main/resources/templates/customer/edit-customer/index_func.html
+++ b/src/main/resources/templates/customer/edit-customer/index_func.html
@@ -6,6 +6,32 @@
         console.log(id);
         getCustomer();
 
+        var elem = document.getElementById("cusMoney");
+
+        elem.addEventListener("keydown", function (event) {
+            var key = event.which;
+            if (key != 8 && key < 48 || (key > 57 && key < 96) || key > 105) event.preventDefault();
+        });
+
+        elem.addEventListener("keyup", function (event) {
+            var value = this.value.replace(/\./g, "");
+            this.dataset.currentValue = parseInt(value);
+            var caret = value.length - 1;
+
+            while ((caret - 3) > -1) {
+                caret -= 3;
+                value = value.split('');
+                value.splice(caret + 1, 0, ".");
+
+                value = value.join('');
+            }
+            this.value = value;
+        });
+
+        function formatMoney(money) {
+            const thousands = /\B(?=(\d{3})+(?!\d))/g;
+            return money.toString().replace(thousands, ".")
+        }
 
         function getCustomer() {
             getRequest({
@@ -16,7 +42,7 @@
                     $('#cusNick').val(data.name);
                     $('#cusPhone').val(data.phone);
                     $('#cusAddr').val(data.address);
-                    $('#cusMoney').val(data.money);
+                    $('#cusMoney').val(formatMoney(data.money));
                     $('#cusDiag').val(data.diag);
                     $('#cusBill').val(data.billing);
                     $('#cusNote').val(data.note);
@@ -29,7 +55,7 @@
             });
         }
 
-        $('#update').click(function(){
+        $('#update').click(function () {
             editCustomer();
         })
 
@@ -39,7 +65,7 @@
             var phone = $('#cusPhone').val();
             var address = $('#cusAddr').val();
             var money = $('#cusMoney').val();
-            money.replace('.', '');
+            money = money.replace('.', '');
             var diag = $('#cusDiag').val();
             var billing = $('#cusBill').val();
             var note = $('#cusNote').val();
@@ -60,7 +86,14 @@
                 url: '/customers/' + id,
                 data: body,
                 success: function (data) {
-                    console.log(data);
+                    // console.log(data);
+                    Swal.fire({
+                        title: 'Cập nhật thông tin thành công',
+                        icon: 'info',
+                        confirmButtonText: 'OK',
+                    }).then((result) => {
+                        window.location = "/customer";
+                    });
                 },
                 error: function (e) {
                     console.log(e);
