--- a/src/main/resources/templates/customer/add-customer/index.html
+++ b/src/main/resources/templates/customer/add-customer/index.html
@@ -50,13 +50,6 @@ License: You must have a valid license purchased only from themeforest(the above
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <style>
-        .vertical-center {
-            margin-left: 25%;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-
         .twitter-typeahead {
             display: block !important;
         }
@@ -141,7 +134,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-6">
-                                            <label>Số điện thoại</label>
+                                            <label>Tình trạng thanh toán</label>
                                             <input type="text" class="form-control material-input"
                                                    id="cusBilling">
                                         </div>
@@ -160,7 +153,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <a class="btn btn-brand" style="color: white;"
                                            onclick="window.location.href = '/customer'"><span>Quay lại</span>
                                         </a>
-                                        <button class="btn btn-success" style="margin-left: 0.5em;">Thêm mới</button>
+                                        <button class="btn btn-success" style="margin-left: 0.5em;" id="btnAddCus">Thêm mới</button>
 
                                     </div>
                                 </div>
@@ -218,7 +211,6 @@ License: You must have a valid license purchased only from themeforest(the above
 <!--end::Global Theme Bundle -->
 
 <!--begin::Page Vendors(used by this page) -->
-
 
 <script src="assets/js/common.js" type="text/javascript"></script>
 <!--end::Page Scripts -->
