add thousand separator

--- a/src/main/resources/templates/transaction/create/index.html
+++ b/src/main/resources/templates/transaction/create/index.html
@@ -159,11 +159,11 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <div class="row">
                                             <div class="col-lg-4">
                                                 <label>Tiền Thủ thuật</label>
-                                                <input type="number" class="form-control material-input" id="moneyPro">
+                                                <input type="text" class="form-control material-input money-input" id="moneyPro">
                                             </div>
                                             <div class="col-lg-4">
                                                 <label>Tiền Thuốc</label>
-                                                <input type="number" class="form-control material-input" id="moneyMec">
+                                                <input type="text" class="form-control material-input money-input" id="moneyMec">
                                             </div>
                                             <div class="col-lg-4">
                                                 <label>Thanh toán</label>
