--- a/src/main/resources/templates/transaction/create/index_func.html
+++ b/src/main/resources/templates/transaction/create/index_func.html
@@ -3,9 +3,34 @@
         var listProcedure = []
         var proQuantity = [];
         var current_date = window.localStorage.getItem("date")
-        var expProcMoney, expMecMoney;
+        var expProcMoney = 0, expMedicineMoney = 0;
 
         getListProcedure()
+
+        var elems = Array.from(document.getElementsByClassName("money-input"));
+
+
+        elems.forEach(elem => {
+            elem.addEventListener("keydown", function (event) {
+                var key = event.which;
+                if (key != 8 && key < 48 || (key > 57 && key < 96) || key > 105) event.preventDefault();
+            });
+            elem.addEventListener("keyup", function (event) {
+                var value = this.value.replace(/\./g, "");
+                this.dataset.currentValue = parseInt(value);
+                var caret = value.length - 1;
+
+                while ((caret - 3) > -1) {
+                    caret -= 3;
+                    value = value.split('');
+                    value.splice(caret + 1, 0, ".");
+
+                    value = value.join('');
+                }
+                this.value = value;
+            });
+        })
+
 
         function getListProcedure() {
             console.log("getListProcedure")
@@ -37,7 +62,7 @@
         }
 
         function saveMecValue() {
-            expMecMoney = 0;
+            expMedicineMoney = 0;
             var mecStr = [];
             var numThang, numLo, priceThang, priceLo;
             numThang = $('#numThang').val();
@@ -47,11 +72,11 @@
 
             if (numThang > 0) {
                 mecStr.push(numThang + ' Thang')
-                expMecMoney += numThang * priceThang;
+                expMedicineMoney += numThang * priceThang;
             }
             if (numLo > 0) {
                 mecStr.push(numLo + ' Lọ')
-                expMecMoney =+ numLo * priceLo;
+                expMedicineMoney = + numLo * priceLo;
             }
             $('#medicine').val(mecStr.join(' + '));
             $('#kt_modal_1').modal('hide');
@@ -101,6 +126,7 @@
                 diagnostic,
                 proceMoney,
                 medicine,
+                expMedicineMoney,
                 medicineMoney,
                 prepaid,
                 debt,
