--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -56,7 +56,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!-- begin::Body -->
 
 <!-- begin::Body -->
-<body class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header--fixed kt-header-mobile--fixed kt-subheader--enabled kt-subheader--fixed kt-subheader--solid kt-aside--enabled kt-aside--fixed kt-page--loading">
+<body class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header-mobile--fixed kt-subheader--enabled kt-subheader--fixed kt-subheader--solid kt-aside--enabled kt-aside--fixed kt-page--loading">
 
 <!-- begin:: Page -->
 
@@ -99,21 +99,21 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
                             <div class="kt-widget14__content">
                                 <div class="kt-widget14__chart">
-                                    <div class="kt-widget14__stat">45</div>
+                                    <div class="kt-widget14__stat" id="cusTotal"></div>
                                     <canvas id="chart_customer" style="height: 140px; width: 140px;"></canvas>
                                 </div>
                                 <div class="kt-widget14__legends">
                                     <div class="kt-widget14__legend">
                                         <span class="kt-widget14__bullet kt-bg-success"></span>
-                                        <span class="kt-widget14__stats">37% Sport Tickets</span>
+                                        <span class="kt-widget14__stats">Bệnh nhân dư tiền</span>
                                     </div>
                                     <div class="kt-widget14__legend">
                                         <span class="kt-widget14__bullet kt-bg-warning"></span>
-                                        <span class="kt-widget14__stats">47% Business Events</span>
+                                        <span class="kt-widget14__stats">Bệnh nhân còn nợ</span>
                                     </div>
                                     <div class="kt-widget14__legend">
                                         <span class="kt-widget14__bullet kt-bg-brand"></span>
-                                        <span class="kt-widget14__stats">19% Others</span>
+                                        <span class="kt-widget14__stats">Bệnh nhân đã thanh toán</span>
                                     </div>
                                 </div>
                             </div>
@@ -171,7 +171,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <!--end::Page Vendors -->
 
 <!--begin::Page Scripts(used by this page) -->
-<!--		<script src="assets/js/pages/dashboard.js" type="text/javascript"></script>-->
+<script src="assets/js/common.js" type="text/javascript"></script>
 
 <!--end::Page Scripts -->
 </body>
