--- a/src/main/resources/templates/transaction/create/index.html
+++ b/src/main/resources/templates/transaction/create/index.html
@@ -124,46 +124,28 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <div class="row">
                                             <div class="col-lg-6">
                                                 <label>Thủ thuật</label>
-                                                <div class="row col-lg-12">
-                                                    <input type="text" class="form-control material-input col-lg-10"
-                                                        placeholder="Thủ thuật" readonly id="cusPros">
-                                                    <div class="col-lg-2" style="text-align: center;">
-                                                        <button type="button"
-                                                            class="btn btn-success btn-circle btn-icon"
-                                                            data-toggle="modal" data-target="#kt_select2_modal"
-                                                            data-backdrop="static" data-keyboard="false">
-                                                            <i class="flaticon2-plus"></i>
-                                                        </button>
-                                                    </div>
-                                                </div>
-
+                                                <input type="text" class="form-control material-input" readonly
+                                                    id="cusPros" data-toggle="modal" data-target="#kt_select2_modal"
+                                                    data-backdrop="static" data-keyboard="false">
                                             </div>
-
                                             <div class="col-lg-6">
                                                 <label>Thuốc</label>
-                                                <div class="row col-lg-12">
-                                                    <input type="text" class="form-control material-input col-lg-10"
-                                                        placeholder="Thuốc" readonly id="medicine">
-                                                    <div class="col-lg-2" style="text-align: center;">
-                                                        <button type="button"
-                                                            class="btn btn-success btn-circle btn-icon"
-                                                            data-toggle="modal" data-target="#kt_modal_1"
-                                                            data-backdrop="static" data-keyboard="false">
-                                                            <i class="flaticon2-plus"></i>
-                                                        </button>
-                                                    </div>
-                                                </div>
-
+                                                <input type="text" class="form-control material-input" readonly
+                                                    id="medicine" data-toggle="modal" data-target="#kt_modal_1"
+                                                    data-backdrop="static" data-keyboard="false">
                                             </div>
+
                                         </div>
                                         <div class="row">
                                             <div class="col-lg-4">
                                                 <label>Tiền Thủ thuật</label>
-                                                <input type="text" class="form-control material-input money-input" id="moneyPro">
+                                                <input type="text" class="form-control material-input money-input"
+                                                    id="moneyPro">
                                             </div>
                                             <div class="col-lg-4">
                                                 <label>Tiền Thuốc</label>
-                                                <input type="text" class="form-control material-input money-input" id="moneyMec">
+                                                <input type="text" class="form-control material-input money-input"
+                                                    id="moneyMec">
                                             </div>
                                             <div class="col-lg-4">
                                                 <label>Thanh toán</label>
@@ -207,8 +189,8 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <table class="table table-bordered">
                                     <thead>
                                         <tr>
-                                            <th style="text-align: center; vertical-align: middle;"
-                                                class="text-left">Số lượng
+                                            <th style="text-align: center; vertical-align: middle;" class="text-left">Số
+                                                lượng
                                             </th>
                                             <th style="text-align: center; vertical-align: middle;" class="text-center">
                                                 Đơn vị tính
@@ -221,28 +203,28 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <tbody id="tbody-mec">
                                         <tr>
                                             <td>
-                                                <input type="number" class="form-control material-input"
-                                                id="numThang" value="0">
+                                                <input type="number" class="form-control material-input" id="numThang"
+                                                    value="0">
                                             </td>
                                             <td>
                                                 Thang
                                             </td>
                                             <td>
-                                                <input type="number" class="form-control material-input"
-                                                id="priceThang" value="0">
+                                                <input type="number" class="form-control material-input" id="priceThang"
+                                                    value="0">
                                             </td>
                                         </tr>
                                         <tr>
                                             <td>
-                                                <input type="number" class="form-control material-input"
-                                                id="numLo" value="0" >
+                                                <input type="number" class="form-control material-input" id="numLo"
+                                                    value="0">
                                             </td>
                                             <td>
                                                 Lọ
                                             </td>
                                             <td>
-                                                <input type="number" class="form-control material-input"
-                                                id="priceLo" value="0">
+                                                <input type="number" class="form-control material-input" id="priceLo"
+                                                    value="0">
                                             </td>
                                         </tr>
                                     </tbody>
@@ -343,6 +325,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
     <script src="assets/js/custom_autocomplete.js" type="text/javascript"></script>
     <script src="assets/js/common.js" type="text/javascript"></script>
+    <script src="assets/js/thousand_separator.js" type="text/javascript"></script>
     <!--end::Page Scripts -->
 </body>
 
