--- a/src/main/resources/templates/transaction/detail.html
+++ b/src/main/resources/templates/transaction/detail.html
@@ -2,6 +2,11 @@
     $(function () {
         const pagination = new Pagination();
         var current_date = window.localStorage.getItem("date")
+        if (!current_date){
+            var todayDate = moment().startOf('day');
+            current_date = todayDate.format('DD/MM/YYYY');
+            window.localStorage.setItem("date", current_date);
+        }
         var list_tran = [];
         var list_spend = [];
         var tranId = undefined;
